<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PHYSCOMP</string>
    <string name="btn_addVisit">Add Visit</string>
    <string name="btn_viewSchedule">View Schedule</string>
    <string name="btn_manage">Manage</string>
    <string name="btn_search">Search</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_choose">Select</string>
    <string name="btn_select_date">Select date</string>
    <string name="btn_select_time">Select time</string>
    <string name="patient">Patient information:</string>
    <string name="duration">Duration:</string>
    <string name="temp">Some information</string>
    <string name="your_choose">Your choose:</string>
    <string name="btn_save">Save</string>
    <string name="choose_date">Date:</string>
    <string name="choose_time">Time:</string>
    <string name="choose_length">Length visit:</string>
    <string name="login">Login:</string>
    <string name="pass">Password:</string>
    <string name="btn_login">login</string>
    <string name="schedule">Schedule:</string>
    <string name="btn_back">Back</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="sex">Sex:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="id">Unique ID (PESEL):</string>
    <string name="country">Country:</string>
    <string name="postal_code">Postal code:</string>
    <string name="email">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="additional_info">Additional info:</string>
    <string name="payer">Payer information:</string>
    <string name="name_of_company">Name of company:</string>
    <string name="address">Address:</string>
    <string name="visit">Visit:</string>
    <string name="appear">Appear</string>
    <string name="btn_medical_certificate">Add medical certificate</string>
    <string name="list">Result list:</string>
    <string name="state">State:</string>
    <string name="town">Town:</string>
    <string name="street">Street:</string>
    <string name="number_of_house">Number of house:</string>
    <string name="number_of_flat">Number of flat:</string>
    <string name="text_about">This application is made for medical doctors who can make different operations with that. They can add a visit, a patient and a payer. About patients and payers there there are the most important information. All visits are visible in schedule view. After visit they can write feedback about it - for example analysis result. This application stores clinical data and data about prescribed drugs. </string>
    <string name="choose_visit">Visit:</string>
    <string name="choose_payer">Payer:</string>
</resources>
