<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_addVisit"
            android:id="@+id/btn_addVisit"
            android:drawableLeft="@drawable/calendar_today"
            android:onClick="btn_addVisit_click"
            />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="btn_schedule_click"
            android:drawableLeft="@drawable/office_calendar"
            android:text="@string/btn_viewSchedule"
            android:id="@+id/btn_viewSchedule"
            />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_manage"
            android:drawableLeft="@drawable/edit_find"
            android:onClick="btn_searchEdit_click"
            android:id="@+id/btn_search"
            />
</LinearLayout>

