<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="bottom">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_weight="2"
                  android:layout_height="fill_parent"
                  android:layout_gravity="bottom">
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/wallpaper_for_mantas"
                android:id="@+id/iv_logo"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="fill_parent"

           >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:gravity="bottom"

                >
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/tv_login"
                    android:gravity="bottom"
                    />
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:id="@+id/et_login"
                    />
            </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                >

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:id="@+id/tv_pass"
                    android:gravity="top"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:id="@+id/et_pass"/>
        </LinearLayout>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn_login"
                android:layout_weight="1"
                android:onClick="btn_login_click"
                android:id="@+id/btn_login"/>
    </LinearLayout>
</LinearLayout>