<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/type"
                        android:id="@+id/sp_type"/>
            </LinearLayout>


            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:id="@+id/et_search"/>
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        android:drawableLeft="@drawable/search"
                        android:text="@string/btn_search"
                        android:id="@+id/btn_search"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_weight="3"
                    android:layout_height="fill_parent">

                <ListView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/lv_result"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_weight="5"
                    android:layout_height="fill_parent"
                    android:layout_gravity="bottom">
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_edit"
                        android:drawableLeft="@drawable/pen"
                        android:id="@+id/btn_edit"
                        android:layout_gravity="bottom"/>
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_add"
                        android:drawableLeft="@drawable/plus_grey"
                        android:id="@+id/btn_add"
                        android:layout_gravity="bottom"/>
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/remove"
                        android:text="@string/btn_delete"
                        android:id="@+id/btn_delete"
                        android:layout_gravity="bottom"/>
            </LinearLayout>
</LinearLayout>